# Word-Frequently-Count

./: CMakeLists.txt  README.md  file.txt
.github/workflows/: codeql.yml
qml/: main.qml
src/: backend.cpp  backend.h  main.cpp
src/BST/: binary_search_tree.cpp  binary_search_tree.hpp
src/manageText/: upload_text.cpp  upload_text.hpp
src/manageWords/: Words.cpp  Words.hpp  checker.cpp  checker.h  dictionary.txt  maintest.cpp  trie.cpp  trie.h  trienode.cpp  trienode.h
src/manager/: manager.cpp  manager.h
